// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoCard renders grid type correctly 1`] = `
<li
  className=" hover:scale-105 ease-in duration-200 cursor-pointer"
  onClick={[Function]}
>
  <img
    alt="title"
    className="w-full"
    src="http://image/"
  />
  <div>
    <p
      className="text-sm font-semibold my-2 line-clamp-2"
    >
      title
    </p>
    <p
      className="text-xs opacity-80"
    >
      channelTitle
    </p>
    <p
      className="text-xs opacity-80"
    >
      3 weeks ago
    </p>
  </div>
</li>
`;

exports[`VideoCard renders list type correctly 1`] = `
<li
  className="flex gap-2 m-2 ml-3 hover:scale-105 ease-in duration-200 cursor-pointer"
  onClick={[Function]}
>
  <img
    alt="title"
    className="w-40"
    src="http://image/"
  />
  <div>
    <p
      className="text-sm font-semibold my-2 line-clamp-2"
    >
      title
    </p>
    <p
      className="text-xs opacity-80"
    >
      channelTitle
    </p>
    <p
      className="text-xs opacity-80"
    >
      3 weeks ago
    </p>
  </div>
</li>
`;
